# Multi-threaded-Chat-Server-Client

./: config.txt  pyproject.toml
src/: chatclient.py  chatserver.py  config.txt  events.py
